--- a/camsible.yml
+++ b/camsible.yml
@@ -19,6 +19,7 @@
           - curl
           - zsh
           - git
+          - gh
           - vim
           - tmux
           - htop
@@ -52,8 +53,6 @@
     - name: Set permissions for SSH keys
       file:
         path: ~/.ssh/id_ed25519
-        mode: '0600'
-
     - name: Ensure known_hosts file has GitHub entry
       known_hosts:
         name: github.com
@@ -72,6 +71,10 @@
       shell: |
         eval $(ssh-agent -s)
         ssh-add ~/.ssh/id_ed25519
+
+    - name: setup git
+      shell: |
+        gh auth --setup-git
 
     - name: Clone dotfiles repository
       git:
