default camsible user

--- a/camsible.yml
+++ b/camsible.yml
@@ -76,7 +76,7 @@
     
     - name: set zsh as default shell for original user
       user:
-        name: "{{ ansible_env.SUDO_USER }}"
+        name: "{{ ansible_env.SUDO_USER | default(ansible_user_id) }}"
         shell: /bin/zsh
 
     - name: Clone dotfiles repository
