split up camsible

--- a/camsible.yml
+++ b/camsible.yml
@@ -1,122 +1,6 @@
 - name: Basic setup for camsible
   hosts: localhost
-  tasks:
-    - name: Update the package list
-      become: yes
-      apt:
-        update_cache: yes
-
-    - name: Upgrade all packages to the latest version
-      become: yes
-      apt:
-        upgrade: dist
-
-    - name: Install essential packages
-      become: yes
-      become_method: sudo
-      apt:
-        name:
-          - curl
-          - zsh
-          - git
-          - gh
-          - vim
-          - tmux
-          - htop
-          - tree
-          - python3-pip
-          - neovim
-          - stow
-        state: present
-
-    - name: install antidote
-      git:
-        repo: https://github.com/mattmc3/antidote.git
-        dest: ~/.antidote
-
-    - name: Create ssh folder
-      file:
-        path: ~/.ssh
-        state: directory
-        mode: "0700"
-
-    - name: Copy encrypted SSH keys tarball
-      copy:
-        src: ssh_keys.tar.gz
-        dest: ~/ssh_keys.tar.gz
-        mode: "0600"
-
-    - name: Unpack SSH keys tarball
-      ansible.builtin.command:
-        cmd: tar xzf ~/ssh_keys.tar.gz -C ~/.ssh
-
-    - name: Set permissions for SSH keys
-      file:
-        path: ~/.ssh/id_ed25519
-        mode: "0600"
-
-    - name: Ensure known_hosts file has GitHub entry
-      known_hosts:
-        name: github.com
-        key: "{{ lookup('pipe', 'ssh-keyscan github.com') }}"
-
-    - name: Configure SSH to use the GitHub key
-      lineinfile:
-        path: ~/.ssh/config
-        create: yes
-        line: |
-          Host github.com
-            IdentityFile ~/.ssh/id_ed25519
-            User git
-
-    - name: Start ssh-agent and add SSH key
-      shell: |
-        eval $(ssh-agent -s)
-        ssh-add ~/.ssh/id_ed25519
-
-    - name: set zsh as default shell for original user
-      user:
-        name: "{{ ansible_env.SUDO_USER | default(ansible_user_id) }}"
-        shell: /bin/zsh
-
-    - name: Clone dotfiles repository
-      git:
-        repo: git@github.com:c-mco/dotfiles.git
-        dest: ~/.dotfiles
-
-    - name: use stow to symlink dotfiles
-      shell: |
-        stow -t ~ -d ~/.dotfiles git nvim p10k zsh
-
-    - name: Clone powerlevel10k
-      git:
-        repo: https://github.com/romkatv/powerlevel10k.git
-        dest: ~/powerlevel10k
-
-    - name: Configure powerlevel10k in .zshrc
-      lineinfile:
-        path: ~/.zshrc
-        create: yes
-        line: "source ~/powerlevel10k/powerlevel10k.zsh-theme"
-
-    - name: Create directories for packer
-      file:
-        path: "~/.local/share/nvim/site/pack/packer/start"
-        state: directory
-        mode: "0755"
-
-    - name: Install packer.nvim
-      git:
-        repo: https://github.com/wbthomason/packer.nvim
-        dest: "~/.local/share/nvim/site/pack/packer/start/packer.nvim"
-
-    - name: Ensure packpath is set correctly
-      lineinfile:
-        path: ~/.config/nvim/init.lua
-        create: yes
-        line: |
-          vim.cmd [[set packpath+=~/.local/share/nvim/site]]
-
-    - name: Install neovim plugins with packer
-      shell: |
-        nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'
+  roles:
+    - common
+    - ssh
+    - dotfiles
