--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -11,7 +11,7 @@
     mode: "0600"
 
 - name: Unpack SSH keys tarball
-  ansible.builtin.command:
+  command:
     cmd: tar xzf ~/ssh_keys.tar.gz -C ~/.ssh
 
 - name: Set permissions for SSH keys
